# lemon8-travel-research-agent

./: .clinerules  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
sample/things_to_do_in_paris_20250315_021121/: things_to_do_in_paris.md
sample/things_to_do_in_paris_20250315_021121/metadata/: 053eabdb8ea6da93.md  1155e97827313cb0.md  158a7eaea4e213c7.md  178c456129facdc5.md  198729bd71f92023.md  1b4aabb76af80c6e.md  1c07a35179309df3.md  20a01601971ac0a6.md  20b44a58d708a31f.md  215c533efc85057a.md  22ba3303216a6424.md  2baa383155c9c011.md  305577c00626467a.md  356083145c7244df.md  39ef58f30d3f709e.md  3d6578b567046974.md  49fb5b0872087b93.md  4a525ca3a16269d6.md  4d3fadedae98a48f.md  52267a49c4ec2883.md  58d26a8d20acacba.md  597bd54c119b89ce.md  6187628ca2200ac7.md  64ffcba0b7efa8db.md  688918335ec3a5cd.md  69e43a2c33c307cf.md  70616beacde8909e.md  7130cd960dee85f8.md  73aa4183e1d57906.md  76bff74a064b5712.md  7889a39c54d6512d.md  7b463021244f11c0.md  83dffc1c29f105fb.md  8669b75cca3013e1.md  89be00ca9fb93ce8.md  8ad80f59bda41b4a.md  8c47f87e8193b19e.md  8ea21d1bfddd509a.md  937ee44416a06147.md  94a9b373486f71f5.md  (+34 more)
sample/things_to_do_in_paris_20250315_021121/posts/: 10 quick tips for your next trip to Paris _ by jess.md  (+41 more)
sample/things_to_do_in_paris_20250315_150932/: things_to_do_in_paris.md
scripts/: clean.bat  clean.sh
src/: config.py  main.py
src/agents/: lemon8_analyzer.py  lemon8_relevance_checker.py  lemon8_scraper.py  report_aggregator.py
src/cli/: __init__.py  input_handler.py  progress_tracker.py  travel_cli.py
(+34 files in other folders)
