[tool.poetry]
name = "lemon8-agent"
version = "0.1.0"
description = "Lemon8 research and analysis tool using crawl4ai"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
crawl4ai = "^0.5.0.post4"
python-dotenv = "^1.0.1"
langchain = "^0.3.20"
langchain-openai = "^0.3.7"
markdown = "^3.5.2"
pillow = "^10.4.0"
textblob = "^0.18.0"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
