[tool.poetry]
name = "lemon8-travel-research-agent"
version = "0.1.0"
description = "A team of agents that scrapes and analyzes authentic user experiences from Lemon8, and generates comprehensive travel guides. Get real recommendations, local insights, and practical travel information based on crowdsourced content."
authors = ["Jia Wei Ng"]

[tool.poetry.dependencies]
python = "^3.11"
crawl4ai = "^0.5.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.20"
langchain-openai = "^0.3.7"
markdown = "^3.5.2"
pillow = "^10.4.0"
crewai = "^0.105.0"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
